Fix editor on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -80,3 +80,6 @@
     @apply bg-background text-foreground;
   }
 }
+.mdxeditor-popup-container {
+  display: none;
+}
